verif/test/deca/syntax/invalid/invalid-integer-initialization-verif.res
src/test/deca/syntax/invalid/invalid-integer-initialization.deca:11:14: no viable alternative at input 'bd'
